--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^8.0.1",
     "pdfkit": "^0.17.2",
+    "resend": "^6.9.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
